--- a/APIChangesTushal/src/styles/globals.css
+++ b/APIChangesTushal/src/styles/globals.css
@@ -1858,6 +1858,18 @@ table tbody tr:hover {
 .edt-flds p {
   height: 24px;
 }
+.data-tble table{
+  display: block;
+}
+.new-table-res {
+  height: 500px;
+  overflow-y: auto;
+}
+.short-ss table {
+  overflow-y: auto;
+  height: 100vh;
+
+}
 
 .data-tble table {
   position: relative;
@@ -1866,11 +1878,11 @@ table tbody tr:hover {
 }
 
 
-.data-tble table th {
+/* .data-tble table th {
   background: white;
   position: sticky;
   top: 88px;
-}
+} */
 
 .agn-btn {
   margin-top: 12px;
@@ -3065,9 +3077,9 @@ body {
 }
 
 .imag-preview {
-  height: 250px;
+  /* height: 250px; */
   position: relative;
-  width: 250px;
+  /* width: 250px; */
   padding: 20px;
 
 }
@@ -3624,4 +3636,214 @@ ul.drp-dwn {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+
+/* arabic responsive */
+.arabic-wrapper .axyz {
+  direction: rtl;
+}
+
+/* .arabic-wrapper .text-srch form input::placeholder{
+  text-align: end;
+} */
+.arabic-wrapper .text-srch form img {
+  position: absolute;
+  top: 11px;
+  right: 86%;
+  text-align: end;
+}
+
+
+/* .arabic-wrapper  input::placeholder{
+  text-align: right;
+} */
+
+.arabic-wrapper .srch-text img {
+  position: absolute;
+  top: 11px;
+  right: 73%;
+}
+
+.arabic-wrapper .sidebar-section,
+.arabic-wrapper .sidebar-section.tlge-sidebar {
+  left: auto;
+  right: 10px !important;
+}
+
+
+.arabic-wrapper .other-component {
+  padding-right: 270px;
+  padding-left: 0;
+}
+
+.arabic-wrapper .meni-list ul li a i {
+  margin-right: 0;
+  margin-left: 16px;
+  width: 25px;
+  display: inline-block;
+}
+
+.arabic-wrapper .other-component.com-pde {
+  padding-right: 80px;
+}
+
+.arabic-wrapper .data-tble table thead th {
+  text-align: right;
+}
+
+.arabic-wrapper .menu-icn {
+  margin-right: 0;
+  margin-left: 40px;
+}
+
+.lang {
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: start;
+  max-width: 80px;
+  text-transform: capitalize;
+}
+
+.lang a {
+  text-decoration: none;
+}
+
+.lang .ara_eng {
+  width: 50%;
+  background-color: #ffffff;
+  border: 1px solid #39bcc0;
+  color: #000;
+  text-align: center;
+  padding: 6px 12px;
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 0 4px 4px 0;
+
+}
+
+.lang .ara_eng#active {
+  background-color: #39bcc0;
+  color: #fff;
+  border-radius: 4px 0px 0px 4px;
+
+}
+
+.arabic-wrapper .meni-list ul li a span .icn-dp {
+  position: absolute;
+  right: 80%;
+  top: 11px;
+  transition: 0.3s;
+}
+
+.new-rtl {
+  direction: rtl !important;
+}
+
+.inputbox {
+  border: 2px solid #39bcc0 !important;
+  width: 100px !important;
+  border-radius: 10px;
+  padding-left: 10px;
+}
+
+.inputbox1 {
+  border: 1px solid #000 !important;
+  width: 100px !important;
+  border-radius: 10px;
+  padding-left: 10px;
+}
+
+.arabic-wrapper .tle-cntr-name img {
+  margin-left: 12px;
+  margin-right: 0;
+}
+
+.arabic-wrapper .date-clr span img {
+  margin-right: 0;
+  margin-left: 5px;
+}
+
+.arabic-wrapper .date-clr span {
+  padding: 8px 5px;
+}
+
+.arabic-wrapper .dtl-icn-fun {
+  margin-left: 0px;
+  margin-right: 5px;
+}
+
+.arabic-wrapper .wht-btn-br {
+  padding: 10px 18px;
+}
+
+.arabic-wrapper .date-rng.date-clr {
+  margin-right: 10px;
+}
+
+.arabic-wrapper .srch-text.ar-mn img {
+  right: 87%;
+}
+
+@media screen and (max-width:992px) {
+  .arabic-wrapper .srch-text img {
+    position: absolute;
+    top: 11px;
+    right: 94%;
+  }
+
+  .arabic-wrapper .flter {
+    margin-right: 0;
+  }
+
+  .noti-mst-uer.text-srch .msg-icn,
+  .noti-mst-uer.text-srch form {
+    display: none;
+  }
+
+  img.logo-img {
+    width: 100px;
+  }
+}
+
+@media screen and (max-width:767px) {
+  .menu-icn {
+    margin-right: 10px;
+  }
+
+  .table-hdr {
+
+    display: inline-block;
+    width: 100%;
+    padding-bottom: 10px;
+  }
+
+  .table-hdr input {
+    width: 100% !important;
+    margin-bottom: 10px;
+
+  }
+
+  .table-hdr .heading-tble {
+    float: left;
+  }
+
+  .table-hdr .imprt-btn {
+    float: right;
+  }
+
+  .hdd-mdl .srch-text {
+    width: 75%;
+  }
+}
+
+
+.arabic-wrapper .modal-title button {
+  background-color: red !important;
+}
+
+
+.arabic-wrapper .btn-close {
+  background-color: red !important;
 }
